--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,27 @@
 *{
-    box-sizing: border-box;
-  }
-  body {
-    font-family: verdana;
-  }
-  
-  ul {
-    display: flex;
-    list-style-type: none;
-    flex-wrap: wrap;
-  }
-  
-  ul li {
-    border-radius: 1rem;
-    margin: 1rem;
-    padding: 1rem;
-    border: solid 1px black;
-    width: calc(100% / 3 - 2rem);
-    display: flex;
-    justify-content: center;
-    background-color: aqua;
-  }
+  box-sizing: border-box;
+}
+body {
+  font-family: verdana;
+}
 
-  .favorite {
-    background-color: linen;
-  }
+#employees {
+  display: flex;
+  list-style-type: none;
+  flex-wrap: wrap;
+}
+
+#employees li {
+  border-radius: 1rem;
+  margin: 1rem;
+  padding: 1rem;
+  border: solid 1px black;
+  width: calc(100% / 3 - 2rem);
+  display: flex;
+  justify-content: center;
+  background-color: aqua;
+}
+
+#employees li.favorite {
+  background-color: linen;
+}
